# ftdi-flash-tool

./: CMakeLists.txt  README.md
config/: FT2232D.cfg  output_ftdi_tool.xml
src/: CMakeLists.txt  ftdi_config_reader.c  main.c
